# MegNet

./: .gitignore  .gitmodules  MANIFEST.in  README.md  conda_environment.yml  conda_environment_update.yml  make_circle_plot.py  makefile  pyproject.toml  setup.py
.github/workflows/: megnet-actions.yml  megnet-actions.ymlLOCAL  megnet-actions_py39.yml
MEGnet/: __init__.py  cvSplits.py  label_ICA_components.py  megnet_qc_plots.py  megnet_utilities.py
MEGnet/model_v2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
MEGnet/model_v2/variables/: variables.index
MEGnet/prep_inputs/: ICA.ipynb  ICA.py  MakeSimilarTopomaps.py  README.md  assess_predictions.py  assess_predictions_pkl.py  assess_predictions_pkl2.py  build_save_dframe_nparrs_inputs.py  build_save_dframe_pkl_inputs.py  classification_table_prep.py  compile_extra_examples.py  convert_hcp_ica.py  cvSplits.py  data_normalization.py  hcp_testing.py  inside_loop_testing.py  make_extra_examples.py  new_train_model.py  new_train_model_modlayers_allinfrozen.py  new_train_model_pkl.py  write_ICA_predictions_tmp.py
MEGnet/prep_inputs/extras/: new_train_model_modlayers.py
MEGnet/prep_inputs/tests/: circle_plot_pos_new.npy  test_cvSplits.py  test_ica2input.py
